model status modified to model

--- a/docs/files/fo_detail/styles.css
+++ b/docs/files/fo_detail/styles.css
@@ -2398,6 +2398,7 @@
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
+  visibility:hidden;
 }
 #u604_div {
   border-width:0px;
@@ -2706,6 +2707,7 @@
   border-width:0px;
   word-wrap:break-word;
   text-transform:none;
+  visibility:hidden;
 }
 #u612_div {
   border-width:0px;
