--- a/docs/files/othereventdeail/styles.css
+++ b/docs/files/othereventdeail/styles.css
@@ -1323,7 +1323,7 @@
   left:0px;
   top:0px;
   width:300px;
-  height:16px;
+  height:32px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
   border:none;
@@ -1331,6 +1331,9 @@
   -moz-box-shadow:none;
   -webkit-box-shadow:none;
   box-shadow:none;
+  font-family:'72-Regular', '72';
+  font-weight:400;
+  font-style:normal;
   font-size:14px;
   color:#32363A;
 }
@@ -1340,8 +1343,11 @@
   left:48px;
   top:686px;
   width:300px;
-  height:16px;
+  height:32px;
   display:flex;
+  font-family:'72-Regular', '72';
+  font-weight:400;
+  font-style:normal;
   font-size:14px;
   color:#32363A;
 }
@@ -1620,7 +1626,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:32px;
+  width:24px;
   height:16px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -1640,7 +1646,7 @@
   position:absolute;
   left:1094px;
   top:193px;
-  width:32px;
+  width:24px;
   height:16px;
   display:flex;
   font-family:'72-Regular', '72';
